--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "client/dist",
-  "framework": "vite",
-  "devCommand": "cd client && npm run dev"
+  "buildCommand": "cd client && pnpm install && pnpm run build",
+  "outputDirectory": "client/dist"
 }
