--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "cd client && pnpm install && pnpm run build",
-  "outputDirectory": "client/dist"
+  "buildCommand": "pnpm install && pnpm run build",
+  "outputDirectory": "dist"
 }
