--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
         "lucide-react": "^0.453.0",
         "react": "^19.2.1",
         "react-dom": "^19.2.1",
-        "react-hook-form": "^7.64.0",,
+        "react-hook-form": "^7.64.0",
                 "react-day-picker": "^9.4.3"
         "recharts": "^2.15.2",
         "sonner": "^2.0.7",
