--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
         "react": "^19.2.1",
         "react-dom": "^19.2.1",
         "react-hook-form": "^7.64.0",
-                "react-day-picker": "^9.4.3"
+                "react-day-picker": "^9.4.3",
         "recharts": "^2.15.2",
         "sonner": "^2.0.7",
         "react-hot-toast": "^2.4.1",
