--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
         "tailwind-merge": "^3.3.1",
         "wouter": "^3.3.5",
         "zod": "^4.1.12",
+        "@tailwindcss/postcss": "^4.0.0",
+        "tailwindcss": "^4.0.0",
         "@radix-ui/react-alert-dialog": "^1.1.4",
         "@radix-ui/react-aspect-ratio": "^1.1.1",
         "@radix-ui/react-collapsible": "^1.1.2",
