--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "@types/multer": "^2.0.0",
     "axios": "^1.12.0",
     "bcrypt": "^6.0.0",
+    "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cookie": "^1.0.2",
