--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
-    "build": "vite build && esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && tsc --skipLibCheck --noEmit || true",
+    "build": "vite build && esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc --skipLibCheck --noEmit || true",
     "format": "prettier --write .",
@@ -43,9 +43,6 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.2",
-    "@trpc/client": "^11.6.0",
-    "@trpc/react-query": "^11.6.0",
-    "@trpc/server": "^11.6.0",
     "@types/multer": "^2.0.0",
     "axios": "^1.12.0",
     "bcrypt": "^6.0.0",
@@ -91,11 +88,14 @@
   "devDependencies": {
     "@builder.io/vite-plugin-jsx-loc": "^0.1.1",
     "@tailwindcss/vite": "^4.1.3",
+    "@trpc/client": "^11.8.1",
+    "@trpc/react-query": "^11.8.1",
+    "@trpc/server": "^11.8.1",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "4.17.21",
     "@types/google.maps": "^3.58.1",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.7.0",
+    "@types/node": "^25.0.9",
     "@types/nodemailer": "^7.0.5",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
