--- a/vercel.json
+++ b/vercel.json
@@ -1,49 +1,11 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "installCommand": "npm install --legacy-peer-deps",
-  "outputDirectory": "dist/public",
-  "functions": {
-    "api/**": {
-      "runtime": "nodejs20.x",
-      "handler": "dist/index.js"
-    }
-  },
-  "env": {
-    "NODE_ENV": "production",
-    "PORT": "3000"
-  },
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "dist/index.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+  "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "dist/public/**", "use": "@vercel/static" }
   ],
-  "headers": [
-    {
-      "source": "/api/:path*",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization, Cookie"
-        },
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        }
-      ]
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "api/index.js" },
+    { "source": "/(.*)", "destination": "dist/public/index.html" }
   ]
 }
