暴力修復：完全隔離 devDependencies 並修改 Vercel 配置
- 確認 tailwindcss 已在 devDependencies 中
- 修改 vercel.json 以排除 node_modules
- 添加 NODE_ENV=production 環境變數
- 重新構建 dist/index.js 並複製到 api/index.js
- 驗證 api/index.js 不包含 lightningcss

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "version": 2,
+  "env": {
+    "NODE_ENV": "production"
+  },
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "api/index.js", "use": "@vercel/node", "config": { "includeFiles": "api/**", "excludeFiles": "node_modules/**" } },
     { "src": "dist/public/**", "use": "@vercel/static" }
   ],
   "rewrites": [
