--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,6 @@
 {
-  "version": 2,
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "builds": [
-    { "src": "api/index.js", "use": "@vercel/node", "config": { "includeFiles": "api/**", "excludeFiles": "node_modules/**" } },
-    { "src": "dist/public/**", "use": "@vercel/static" }
-  ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "api/index.js" },
-    { "source": "/(.*)", "destination": "dist/public/index.html" }
+    { "source": "/api/:path*", "destination": "/api/index" },
+    { "source": "/(.*)", "destination": "/dist/public/index.html" }
   ]
 }
