--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/index" },
-    { "source": "/(.*)", "destination": "/dist/public/index.html" }
+    { "source": "/api/:path*", "destination": "/api/index" }
   ]
 }
