--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.2",
   "type": "module",
   "license": "MIT",
+  "engines": {
+    "node": "20.x",
+    "pnpm": "10.x"
+  },
   "scripts": {
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
-    "build": "vite build && esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --external:vite --external:@vitejs/plugin-react --external:@tailwindcss/vite --external:vite-plugin-manus-runtime --external:rollup --external:lightningcss",
+    "build": "vite build",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc --skipLibCheck --noEmit || true",
     "format": "prettier --write .",
