--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "installCommand": "pnpm install",
   "buildCommand": "pnpm build",
+  "outputDirectory": "dist/public",
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/index" }
+    { "source": "/api/(.*)", "destination": "/api/index.ts" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
