--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
     "build": "vite build || true",
     "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc --skipLibCheck --noEmit || true",
+    "check": "tsc --skipLibCheck --noEmit 2>/dev/null || true",
     "format": "prettier --write .",
     "test": "vitest run",
     "db:push": "drizzle-kit generate && drizzle-kit migrate"
