--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.2",
     "@types/multer": "^2.0.0",
+    "@vercel/node": "^5.5.27",
     "axios": "^1.12.0",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.6.2",
