--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@types/multer": "^2.0.0",
     "@vercel/node": "^5.5.27",
     "axios": "^1.12.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.9.0",
@@ -97,6 +97,7 @@
     "@trpc/react-query": "^11.8.1",
     "@trpc/server": "^11.8.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "4.17.21",
     "@types/google.maps": "^3.58.1",
     "@types/jsonwebtoken": "^9.0.10",
