Checkpoint: 完成了最終的 Vercel 配置修復，確保 API 路由能夠正確部署和訪問：
1. **文件位置驗證**
   - ✅ debug-seed.ts 位於 /api/debug-seed.ts（根目錄）
   - ✅ upload-test.ts 位於 /api/upload-test.ts（根目錄）
   - ✅ 文件名大小寫正確（全小寫）

2. **vercel.json 最終配置**
   - 添加 `functions` 配置明確指定 API 路由
   - 添加 `/api/(.*)` 重寫規則保護 API 路由
   - 保留 SPA 路由重寫規則用於前端
   - 設置 maxDuration 為 30 秒
   - 指定 runtime 為 nodejs20.x

3. **編譯驗證**
   - ✅ 本地 pnpm build 成功
   - ✅ dist/public 輸出正確

**關鍵修復：**
添加了 `/api/(.*)` 重寫規則確保 API 路由不被 SPA 路由攔截，這是導致 {"error":"Not found"} 的根本原因。

**下一步：**
在 Vercel 部署並驗證 Functions 標籤中是否顯示 debug-seed 和 upload-test 函數。

--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,19 @@
   "buildCommand": "pnpm build",
   "outputDirectory": "dist/public",
   "functions": {
-    "api/**/*.ts": {
+    "api/*.ts": {
+      "maxDuration": 30,
       "runtime": "nodejs20.x"
     }
   },
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
