Checkpoint: 最終修正 vercel.json 配置，解決 runtime 版本錯誤：
**修復內容：**
1. **簡化 vercel.json**
   - 移除 functions 區塊（導致 runtime 版本錯誤）
   - 保留 outputDirectory 和 rewrites 配置
   - 修改 rewrites：/api/(.*) → api/index.ts（無前導斜線）

2. **讓 Vercel 自動識別**
   - ✅ Vercel 會自動檢測 /api 目錄中的 Node.js 文件
   - ✅ 自動使用 Node.js 20（基於 package.json 的 engines 配置）
   - ✅ 無需手動指定 runtime

3. **編譯驗證**
   - ✅ pnpm build 成功完成（7.54s）
   - ✅ 無任何 TypeScript 編譯錯誤

**關鍵改進：**
- 簡化配置，避免 runtime 版本錯誤
- Vercel 自動識別 /api 目錄為 Serverless Functions
- 所有 /api/* 請求正確路由到 api/index.ts

**下一步：**
部署到 Vercel 並測試 /api/debug-seed 和 /api/ping 端點。

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,7 @@
 {
   "outputDirectory": "dist/public",
-  "functions": {
-    "api/index.ts": {
-      "runtime": "nodejs20.x"
-    },
-    "api/ping.ts": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.ts" },
+    { "source": "/api/(.*)", "destination": "api/index.ts" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
